@@ -5,10 +5,9 @@ import os
 import sys
 from time import time
 import subprocess # for subprocess.Popen
-#import PSCalib.GlobalUtils as gu
-from PSCalib.RunProcUtils import log_file, append_log_file, exp_run_new, exp_run_new_under_control, dict_exp_run_old, print_exp_runs_old
-
 from PSCalib.GlobalUtils import get_login
+
+#import PSCalib.GlobalUtils as gu
 """
 :py:class:`SubprocUtils` contains utils to use subproccesses in specific apps
 =============================================================================
@@ -19,12 +18,25 @@ Usage::
     import PSCalib.SubprocUtils as su
 
     # Parameters
+    cmd='bsub -q psnehq -o log-%%J.txt ls -l'
+    qname='psnehq'
+    env=None
+    shell=False
+    jobid='52966'
 
     # Methods
-    dsn   = su.dsname(exp='xpptut15', run='0001')
+    su.call(cmd, shell=False)
+    out, err = su.subproc(cmd, env=None, shell=False, do_wait=True)
+    out, err, jobid = su.batch_job_submit(cmd='bsub -q psnehq -o log-%%J.txt ls -l', env=None, shell=False)
+    njobs = su.number_of_batch_jobs(usr=None, qname=None)
+    out, err = su.batch_job_kill(jobid, qname='psnehq')
 
 Methods 
-  * :meth:`dsname`
+  * :meth:`call`
+  * :meth:`subproc`
+  * :meth:`batch_job_submit`
+  * :meth:`number_of_batch_jobs`
+  * :meth:`batch_job_kill`
   * ...
 
 This software was developed for the SIT project.
@@ -53,7 +65,7 @@ def subproc(cmd, env=None, shell=False, do_wait=True) :
 
 #------------------------------
 
-def str_jobid(msg) :
+def _str_jobid(msg) :
     """Returns (str) job Id from input string.
 
        E.g. returns '849160' from msg='Job <849160> is submitted to queue <psnehq>.'
@@ -67,12 +79,12 @@ def str_jobid(msg) :
 
 def batch_job_submit(cmd='bsub -q psnehq -o log-%%J.txt ls -l', env=None, shell=False) :
     out, err = subproc(cmd, env, shell)
-    jobid = str_jobid(out)
+    jobid = _str_jobid(out)
     return out, err, jobid
 
 #------------------------------
 
-def str_status(msg) :
+def _str_status(msg) :
     lines  = msg.split('\n')
     #for line in lines : print 'batch_job_status: ' + line
     if len(lines)<2 : return None
@@ -95,12 +107,12 @@ def batch_job_status(jobid, qname='psnehq') :
     """
     cmd = 'bjobs -q %s %s' % (qname, jobid)
     out, err = subproc(cmd, env=None, shell=False)
-    status = str_status(out)
+    status = _str_status(out)
     return out, err, status
 
 #------------------------------
 
-def number_of_records(txt) :
+def _number_of_records(txt) :
     lines  = txt.rstrip('\n').split('\n')
     return len(lines)
 
@@ -112,7 +124,7 @@ def number_of_batch_jobs(usr=None, qname=None) : # qname='psnehq'
     cmd = 'bjobs -u %s' % (get_login() if usr is None else usr)
     if qname is not None : cmd += ' -q %s' % qname
     out, err = subproc(cmd, env=None, shell=False)
-    return number_of_records(out) - 1
+    return _number_of_records(out) - 1
 
 #------------------------------
 
@@ -126,74 +138,40 @@ def batch_job_kill(jobid, qname='psnehq') :
 #------------------------------
 #------------------------------
 
-def proc_exp_runs(exp_runs, procname='pixel_status', add_to_log=False) :
-    for i,(exp,run) in enumerate(exp_runs) :
-        dsname = 'exp=%s:run=%s'%(exp, run.lstrip('0'))
-        logname = log_file(exp, procname)
-        print '%4d %s %4s %s %s'%(i+1, exp.ljust(10), run, dsname.ljust(22), logname)
-        #--------------
-        if add_to_log : append_log_file(exp, procname, [run,])
-        #--------------
-    print '%d new runs found' % (len(exp_runs))
-
-#------------------------------
-
-def print_exp_runs(exp_runs, procname='pixel_status', add_to_log=False) :
-    for i,(exp,run) in enumerate(exp_runs) :
-        dsname = 'exp=%s:run=%s'%(exp, run.lstrip('0'))
-        logname = log_file(exp, procname)
-        print '%4d %s %4s %s %s'%(i+1, exp.ljust(10), run, dsname.ljust(22), logname)
-        #--------------
-        if add_to_log : append_log_file(exp, procname, [run,])
-        #--------------
-    print '%d new runs found' % (len(exp_runs))
-
-#------------------------------
-
-def print_datasets_new(ins='CXI', procname='pixel_status', add_to_log=False) :
-    exp_runs = exp_run_new(ins, procname)
-    #print 'XXX:\n', exp_runs
-    print_exp_runs(exp_runs, procname, add_to_log)
-
-#------------------------------
-
-def print_datasets_new_under_control(procname='pixel_status', add_to_log=False) :
-    exp_runs = exp_run_new_under_control(procname)
-    print_exp_runs(exp_runs, procname, add_to_log)
-
-#------------------------------
-
-def print_datasets_old(ins='CXI', procname='pixel_status', move_to_archive=False) :
-    dic_exp_runs = dict_exp_run_old(ins, procname)
-    print_exp_runs_old(dic_exp_runs, procname, move_to_archive)
-
-#------------------------------
-#------------------------------
-#------------------------------
-
-def test_cmd(cmd = 'ls -ltra') :
-    out, err = subproc(cmd)
+def test_subproc(cmd='ls -ltra', env=None, shell=False, do_wait=True) :
+    out, err = subproc(cmd, env, shell, do_wait)
     print 'Command: "%s"' % cmd
     print 'out:\n"%s"' % out
     print 'err:\n"%s"' % err
  
 #------------------------------
 
-def test01() :
-    cmd = 'bsub -q psanaq -o log-ls.txt ls -l'
-    test_cmd(cmd)
+def test_batch_job_submit(cmd='bsub -q psnehq -o log-%J.txt ls -l', env=None, shell=False) :
+    out, err, jobid = batch_job_submit(cmd, env, shell)
+    print 'Command: "%s"' % cmd
+    print 'out:\n"%s"' % out
+    print 'err:\n"%s"' % err
+    print 'jobid:"%s"' % jobid
+    print 'check log file log-%s.txt' % jobid
 
+#------------------------------
+
+def test_number_of_batch_jobs(usr=None, qname='psnehq') :
+    njobs = number_of_batch_jobs(usr, qname)
+    print 'usr  : %s' % str(usr)
+    print 'qname: %s' % qname
+    print 'njobs: %d' % njobs
+
+#------------------------------
+#------------------------------
 #------------------------------
 #------------------------------
 
 def usage() :
-    return  'python PSCalib/src/RunProcUtils.py <test_name>\n'\
-           +'       <test_name> = 1  - print new files in experiments listed in control file\n'\
-           +'                   = 10 - the same as 1 and save record for each new run in log file\n'\
-           +'                   = 2  - print new files in all experiments\n'\
-           +'                   = 20 - the same as 2 and save record for each new run in log file\n'\
-           +'                   = 4  - print old (available in log but missing in xtc-dir) files for all experiments\n'\
-           +'                   = 40 - the same as 4 and move old run records from log to archive file\n'
+    return  'python PSCalib/src/SubprocUtils.py <test_name>\n'\
+           +'       <test_name> = 1  - test subproc\n'\
+           +'                   = 2  - test batch_job_submit\n'\
+           +'                   = 3  - test number_of_batch_jobs\n'
 
 #------------------------------
 
@@ -202,16 +180,9 @@ if __name__ == "__main__" :
     tname = sys.argv[1] if len(sys.argv)>1 else '1'
     t0_sec = time()
 
-    if   tname=='1' : print_datasets_new_under_control(procname='pixel_status')
-    elif tname=='10': print_datasets_new_under_control(procname='pixel_status', add_to_log=True)
-
-    elif tname=='2' : print_datasets_new(ins=None, procname='pixel_status')
-    elif tname=='20': print_datasets_new(ins=None, procname='pixel_status', add_to_log=True)
-
-    elif tname=='4' : print_datasets_old(ins=None, procname='pixel_status')
-    elif tname=='40': print_datasets_old(ins=None, procname='pixel_status', move_to_archive=True)
-
-    elif tname=='6' : print 'number_of_batch_jobs: %d' % number_of_batch_jobs(usr=None, qname=None)
+    if   tname=='1': test_subproc(cmd='ls -ltra')
+    elif tname=='2': test_batch_job_submit(cmd='bsub -q psnehq -o log-%J.txt ls -l', env=None, shell=False)
+    elif tname=='3': test_number_of_batch_jobs(usr=None, qname='psnehq')
 
     else : sys.exit ('Not recognized test name: "%s"' % tname)
     print 'Test %s time (sec) = %.3f' % (tname, time()-t0_sec)
